<resources>
    <string name="app_name">CSCI321 - Prepareo</string>
    <string name="title_activity_login">Sign in</string>
    <string name="logo_description">Prepareo Logo</string>


    <!-- Strings related to LoginPage -->
    <string name="login_button_login">Continue</string>
    <string name="login_prompt_email">Email</string>
    <string name="login_prompt_password">Password</string>
    <string name="login_password_hint">Password</string>
    <string name="login_error_invalid_email">This email address is invalid</string>
    <string name="login_error_invalid_password">This password is too short</string>
    <string name="login_error_incorrect_password">This password is incorrect</string>
    <string name="login_error_field_required">This field is required</string>
    <string name="login_button_facebook">LOGIN WITH FACEBOOK</string>
    <string name="login_button_register">Register Now</string>

    <!-- Strings related to Create Account -->
    <string name="create_fullname_hint">Full Name</string>
    <string name="create_email_hint">Email</string>
    <string name="create_birthday_hint">Birthday</string>
    <string name="create_address_hint">Address</string>
    <string name="create_password_hint1">Password</string>
    <string name="create_password_hint2">Re-Enter Password</string>
    <string name="create_button_continue">Continue</string>
    <string name="create_disclaimer">By creating an account you agree to our Terms of Service and Privacy Policy</string>

    <!-- Strings related to Dashboard -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="dashboard_heading">Dashboard</string>
    <string name="dashboard_logo">Dashboard logo</string>
    <string name="dashboard_button_calendar">Calendar</string>
    <string name="dashboard_button_subjects">Enrolment Record</string>
    <string name="dashboard_button_statistics">Statistics</string>
    <string name="dashboard_button_notifications">Notifications</string>
    <string name="dashboard_button_ontology">Ontology (OWL)</string>
    <string name="dashboard_button_goals">Goals</string>

    <!-- Strings related to Notification -->
    <string name="notification_name">Notification Name</string>
    <string name="notification_frequency">Notification Frequency</string>
    <string name="notification_startDate">Start Date</string>
    <string name="notification_endDate">End Date</string>
    <string name="notification_msg">Notification Message</string>
    <string name="notification_btn_close">Close</string>
    <string name="notification_btn_save">Save</string>
    <string name="notification_heading">Create Notification</string>

    <!-- Strings related to Profile -->
    <string name="profile_heading">Ontology Category Information</string>

    <!-- Strings related to Subjects -->
    <string name="subjects_heading">Add Subject</string>
    <string name="subjects_name">Subject Name</string>
    <string name="subjects_code">Subject Code</string>
    <string name="subjects_boxTextOne">Credit Points</string>
    <string name="subjects_boxTextOneAnswer">80%</string>

    <!-- Strings Related to Assignments -->
    <string name="assignments_str_Name">Assignment Name</string>
    <string name="assignments_str_Weight">Assignment Weight</string>

    <!-- Strings RElated to Statistics -->
    <string name="title_activity_statistics">Statistics</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="statistics_heading">WEEKLY TASKS</string>
    <string name="statistics_descriptionOne">You are going well to meet your weekly targets. Do the hard work now so you can relax later.</string>
    <string name="statistics_redHeading">TASKS COMPLETE</string>
    <string name="statistics_whiteHeading">OVERALL PROGRESS</string>
    <string name="statistics_tab2_heading">DAILY TASKS</string>
    <string name="statistics_tab2_notingHeading">DAILY NOTICE</string>
    <string name="statistics_tab2_noticeQuote">You are falling behind today. Make sure you complete tasks A, Assignment 3 - CSCI203 as the due is fast approaching.</string>
    <string name="statistics_tab2_dailyGoalsHeading">DAILY GOALS</string>
    <string name="statistics_tab2_goalComplete">Complete</string>
    <string name="statistics_tab2_goalActive">Active</string>

    <!-- Strings Related to Calendar -->
    <string name="calendar_heading">Select Date</string>

    <!-- Strings Related to Enrolment Record -->
    <string name="enrolment_boxTextOne">Credit Average</string>
    <string name="enrolment_avg">Distinction</string>
    <string name="enrolment_str_bachelor">Bachelor</string>
    <string name="enrolment_str_major">Major</string>

    <!-- Strings to call saved data for each page -->
    <string name="notification_savedata">notificationsMain</string>
    <string name="account_savedata">accountMain</string>
    <string name="enrolmentrecord_savedata">enrolmentMain</string>
    <string name="subjects_savedata">subjectsMain</string>
    <string name="assignments_savedata">assignments-</string>
    <string name="goals_savedata">goals-</string>
    <string name="subjects_notifications_savedata">notification-</string>

    <!-- Goals -->
    <string name="goals_tab1">PERSONAL</string>
    <string name="goals_tab2">ACADEMIC</string>
    <string name="goals_heading">Add Goal</string>
    <string name="goals_title">Goal Title</string>
    <string name="goals_dueDate">Goal Due Date</string>
    <string name="goals_boxTextOne">Credit Points</string>
    <string name="goals_boxTextOneAnswer">80%</string>
    <string name="tv_assdet_weight">Weight</string>
    <string name="tv_assdet_title">Title</string>
    <string name="tv_assdet_totalmark">Total Mark</string>
    <string name="tv_assdet_dueDate">Due Date</string>
    <string name="assignment_dueDate">Due Date</string>
    <string name="assignments_str_totalMark">Total Mark</string>
    <string name="goal_description">Goal Description</string>

</resources>

