<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height = "match_parent"
    android:paddingLeft= "@dimen/activity_horizontal_margin"
    android:paddingRight = "@dimen/activity_horizontal_margin"
    android:paddingTop = "@dimen/activity_vertical_margin"
    android:paddingBottom = "@dimen/activity_vertical_margin"
    android:background="@drawable/background_redbar_top"
    tools:context = ".LoginPage">

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="295dp"
        android:layout_height="87dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="67dp"
        android:layout_marginLeft="67dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:contentDescription="@string/logo_description"
        app:srcCompat="@drawable/logowhite" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="330dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="229dp"
        android:ems="10"
        android:background="@color/colorWhite"
        android:hint="@string/login_prompt_email"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/form_font_size" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="330dp"
        android:layout_height="64dp"
        android:layout_below="@+id/login_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorWhite"
        android:ems="10"
        android:hint="@string/login_prompt_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="333dp"
        android:layout_height="60dp"
        android:layout_below="@+id/login_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="113dp"
        android:layout_marginRight="113dp"
        android:background="@color/colorRed"
        android:text="@string/login_button_login"
        android:textColor="@color/colorWhite"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="315dp"
        android:layout_height="63dp"
        android:layout_below="@+id/login_btn_login"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/login_facebook_desc"
        android:text="@string/login_button_facebook"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/form_font_size"
        android:textStyle="bold"


        />

    <Button
        android:id="@+id/noAccount"
        android:layout_width="202dp"
        android:layout_height="56dp"
        android:layout_below="@+id/login_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="243dp"
        android:layout_marginLeft="243dp"
        android:layout_marginTop="-14dp"
        android:background="@android:color/transparent"
        android:text="@string/login_button_register"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        android:textStyle="bold" />

</RelativeLayout>