<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height = "match_parent"
    android:paddingLeft= "@dimen/activity_horizontal_margin"
    android:paddingRight = "@dimen/activity_horizontal_margin"
    android:paddingTop = "@dimen/activity_vertical_margin"
    android:paddingBottom = "@dimen/activity_vertical_margin"
    android:background="@drawable/background_dashboard"
    tools:context = ".Dashboard">


    <Button
        android:id="@+id/dashboard_button_ontology"
        android:layout_width="150dp"
        android:layout_height="105dp"
        android:layout_below="@+id/dashboard_Title"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/button_redbackground_blackstroke"
        android:drawableTop="@drawable/heart"
        android:text="@string/dashboard_button_ontology"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/dashboard_button_calendar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_button_subject" />

    <Button
        android:id="@+id/dashboard_button_subject"
        android:layout_width="150dp"
        android:layout_height="105dp"
        android:layout_below="@+id/dashboard_Title"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/button_redbackground_blackstroke"
        android:drawableTop="@drawable/icon_subjects"
        android:text="@string/dashboard_button_subjects"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/dashboard_button_goals"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_Title" />

    <ImageView
        android:id="@+id/dashboard_logo"
        android:layout_width="129dp"
        android:layout_height="130dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/dashboard_logo"
        app:layout_constraintStart_toEndOf="@+id/dashboard_Title"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/dashboard_Title"
        android:layout_width="155dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="88dp"
        android:text="@string/dashboard_heading"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/form_font_size_heading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dashboard_button_calendar"
        android:layout_width="150dp"
        android:layout_height="105dp"
        android:layout_below="@+id/dashboard_Title"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/button_redbackground_blackstroke"
        android:drawableTop="@drawable/heart"
        android:text="@string/dashboard_button_calendar"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dashboard_button_ontology"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_button_goals" />

    <Button
        android:id="@+id/dashboard_button_goals"
        android:layout_width="150dp"
        android:layout_height="105dp"
        android:layout_below="@+id/dashboard_Title"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/button_redbackground_blackstroke"
        android:drawableTop="@drawable/heart"
        android:text="@string/dashboard_button_goals"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dashboard_button_subject"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_Title" />

    <Button
        android:id="@+id/dashboard_button_statistics"
        android:layout_width="150dp"
        android:layout_height="105dp"
        android:layout_below="@+id/dashboard_Title"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/button_redbackground_blackstroke"
        android:drawableTop="@drawable/icon_statistics"
        android:text="@string/dashboard_button_statistics"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/dashboard_button_notifications"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_button_ontology" />

    <Button
        android:id="@+id/dashboard_button_notifications"
        android:layout_width="150dp"
        android:layout_height="105dp"
        android:layout_below="@+id/dashboard_Title"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/button_redbackground_blackstroke"
        android:drawableTop="@drawable/notifications"
        android:text="@string/dashboard_button_notifications"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dashboard_button_statistics"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_button_calendar" />

</android.support.constraint.ConstraintLayout>