<?xml version="1.0" encoding="utf-8"?>
<!--
*********************************************
* CSIT321 - Prepareo
* Author/s:		David, Alec, Lachlan, Connor, Adam
*********************************************
-->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdge="horizontal|vertical"
    android:scrollbars="vertical"
    android:background="@drawable/colorTransparent"
    android:id="@+id/goals_popUp_layout"
    >

    <FrameLayout
        android:layout_width="314dp"
        android:layout_height="295dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"

        android:background="@color/colorGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_border"
            android:minHeight="350dp">

            <EditText
                android:id="@+id/et_goals_title"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="false"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/textview_border"
                android:ems="10"
                android:hint="@string/goals_title"
                android:inputType="text"
                android:textSize="@dimen/form_font_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.484"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_goals_dueDate" />

            <EditText
                android:id="@+id/et_goals_dueDate"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="false"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/textview_border"
                android:ems="10"
                android:hint="@string/goals_dueDate"
                android:inputType="text"
                android:textSize="@dimen/form_font_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.484"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/goals_heading" />


            <Button
                android:id="@+id/goals_btn_save"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/textview_green_noborder"
                android:text="@string/notification_btn_save"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toEndOf="@+id/goals_btn_close"
                app:layout_constraintTop_toBottomOf="@+id/et_goals_title" />

            <Button
                android:id="@+id/goals_btn_close"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:background="@drawable/textview_red_noborder"
                android:text="@string/notification_btn_close"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toStartOf="@+id/goals_btn_save"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_goals_title" />

            <EditText
                android:id="@+id/goals_heading"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/transparent"
                android:clickable="false"
                android:editable="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="none"
                android:text="@string/goals_heading"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </FrameLayout>

</android.support.constraint.ConstraintLayout>